[tool.poetry]
name = "generic_python_env"
version = "0.1.0"
description = "A generic environment, Anaconda replacement."
authors = ["Martin Høy <martin@hoy.priv.no>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pandas = "^1.3.5"
openpyxl = "^3.0.9"
msal = "^1.16.0"
requests = "^2.27.0"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"
ipykernel = "^6.6.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
